force-app/main/default/objects/HAM_ChapterZipCode__c/HAM_ChapterZipCode__c.object-meta.xml
<CustomObject>
    <description>Chapter region table for the Chapter Lookup object</description>
    <label>Chapter Zip Code</label>
    <nameField>
        <displayFormat>Z-{00000}</displayFormat>
        <label>Chapter Zip Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chapter Zip Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>