force-app/main/default/objects/HAM_ChapterZipCode__c/fields/HAM_Chapter_Lookup__c.field-meta.xml
<CustomField>
    <fullName>HAM_Chapter_Lookup__c</fullName>
    <description>Chapter Region</description>
    <label>Chapter Lookup</label>
    <referenceTo>HAM_Chapter_Lookup__c</referenceTo>
    <relationshipLabel>Chapter Zip Codes</relationshipLabel>
    <relationshipName>Chapter_Zip_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>