force-app/main/default/objects/HAM_ChapterZipCode__c/fields/HAM_City__c.field-meta.xml
<CustomField>
    <fullName>HAM_City__c</fullName>
    <description>City associated with the Chapter region</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>