force-app/main/default/objects/HAM_ChapterZipCode__c/fields/HAM_Country__c.field-meta.xml
<CustomField>
    <fullName>HAM_Country__c</fullName>
    <description>Country associated with the Chapter region</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>