force-app/main/default/objects/HAM_ChapterZipCode__c/fields/HAM_State__c.field-meta.xml
<CustomField>
    <fullName>HAM_State__c</fullName>
    <description>State associated with the Chapter region</description>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>