force-app/main/default/objects/HAM_ChapterZipCode__c/fields/HAM_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>HAM_Zip_Code__c</fullName>
    <description>Zip Code associated with the Chapter region</description>
    <label>Zip Code</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>